[package]
name = "mori"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
libc = "0.2.142"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
